updated seamless with troubleshooting steps

--- a/m13.seamlessDeploymentProject/transferFiles/Dockerfile
+++ b/m13.seamlessDeploymentProject/transferFiles/Dockerfile
@@ -1,5 +1,10 @@
-FROM amazonlinux
-RUN yum install telnet -y
-RUN amazon-linux-extras install nginx1 -y
-COPY ./nginx.conf /etc/nginx/nginx.conf
-CMD ["nginx","-g","daemon off;"]
+
+FROM httpd
+COPY ./hospital-website-template/* /usr/local/apache2/htdocs/
+
+# Notes
+# Docker version 20.10.17, build 100c701
+# docker stop my-running-app; docker rm my-running-app
+# Trouble-shooting https://github.com/GoogleContainerTools/container-diff
+# sudo docker commit [CONTAINER_ID] [new_image_name]
+# docker cp /root/build/con/. 22a395a89257:/usr/local/apache2/htdocs/
